# pdf-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
Examples/: example_01_hello_world.py  example_02_text_styles.py  example_03_shapes.py  example_04_lines_and_strokes.py  example_05_multipage.py  example_06_custom_font.py  example_07_image.py  example_08_annotations.py  example_09_invoice.py  example_10_dashboard.py  example_11_font_registry.py  example_12_unicode.py  example_13_password_protected.py  example_15_rtl_text.py  example_16_pdf_merge.py  example_17_images_from_disk.py  example_19_text_wrapping.py  example_20_table.py
scripts/: build-native-wheel.sh
src/majorsilence_pdf/: __init__.py  pdf_native.py
tests/: test_pdf_native.py
